--- a/src/pages/main-components/Navbar.module.css
+++ b/src/pages/main-components/Navbar.module.css
@@ -1,4 +1,5 @@
 .navbar {
+    padding: 2vw;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -9,6 +10,7 @@
 .logo {
     margin-left: auto;
     margin-right: auto;
+    z-index: 1;
 }
 
 .logo img {
@@ -16,40 +18,146 @@
     height: 75px;
 }
 
-.menu ul {
-    /* display: none; */
+
+.menu nav {
+    opacity: 0;
+    pointer-events: none;
     position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-image: linear-gradient(110deg, rgb(131, 31, 123), rgba(156, 76, 149, 0.8), rgba(168, 98, 163, 0.6), rgba(181, 121, 176, 0.4), rgba(193, 143, 189, 0.2));
+    transition: all 0.8s linear;
+}
+
+
+.menu ul {
+    width: 140px;
+    padding-left: 2vw;
+    margin-top: 100px;
 }
 
 .menu a {
-    list-style: none;
     text-decoration: none;
+    color: #030D04;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 5px;
 }
 
-
-.hamburger span {
-    display: block;
-    width: 33px;
-    height: 4px;
-    margin-bottom: 5px;
-    border-radius: 3px;
-    background: #416569;
-    position: relative;
-    z-index: -1;
-    /* transform-origin: 4px 0px; */
-    /* transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease; */
+.menu li {
+    font-size: 20px;
+    font-weight: 600;
+    border: rgba(3, 13, 4, 0.5) 1px solid;
+    border-radius: 8px;
+    padding: 5px 8px;
+    list-style: none;
+    margin: 20px 0 20px 0;
+    transition: transform 0.2s ease;
 }
 
+.menu li:nth-of-type(1) {
+    transform: translate(-200px, 0);
+    transition: all 0.5s ease;
+}
 
-.hamburger input {
+.menu li:nth-of-type(2) {
+    transform: translate(-200px, 0);
+    transition: all 0.7s ease;
+    transition-delay: 0.1;
+}
+
+.menu li:nth-of-type(3) {
+    transform: translate(-200px, 0);
+    transition: all 0.9s ease;
+    transition-delay: 0.2;
+}
+
+.menu li:nth-of-type(4) {
+    transform: translate(-200px, 0);
+    transition: all 1.1s ease;
+    transition-delay: 0.3;
+}
+
+.menu li:hover {
+    background-color: rgba(3, 13, 4, 0.1);
+}
+
+.menu li:active {
+    translate: 0 18px;
+}
+
+.menu input {
     width: 40px;
-    height: 32px;
+    height: 30px;
+    margin-top: -6px;
+    margin-left: -4px;
     position: absolute;
-    z-index: 1;
-    top: -1px;
-    left: 0px;
+    z-index: 2;
     cursor: pointer;
     opacity: 0;
+}
+
+.menu span {
+    display: block;
+    width: 34px;
+    height: 3px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    background-color: #030D04;
+    position: relative;
+    z-index: 1;
+}
+
+.menu span:nth-of-type(1) {
+    transform-origin: 4px 0px;
+    transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition-delay: 0.1s;
+}
+
+.menu span:nth-of-type(2) {
+    transition: width 0.5s linear,
+        opacity 0.6s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+.menu span:nth-of-type(3) {
+    transform-origin: 0% 100%;
+    transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition-delay: 0.3s;
+}
+
+.menu input:checked~span:nth-of-type(1) {
+    transform: rotate(45deg) translate(-3px, -3px);
+}
+
+.menu input:checked~span:nth-of-type(2) {
+    width: 0;
+    opacity: 0;
+}
+
+.menu input:checked~span:nth-of-type(3) {
+    transform: rotate(-45deg);
+}
+
+.menu input:checked~nav {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.menu input:checked~nav li:nth-of-type(1) {
+    transform: translate(0);
+}
+
+.menu input:checked~nav li:nth-of-type(2) {
+    transform: translate(0);
+}
+
+.menu input:checked~nav li:nth-of-type(3) {
+    transform: translate(0);
+}
+
+.menu input:checked~nav li:nth-of-type(4) {
+    transform: translate(0);
 }
