--- a/src/pages/main-components/Navbar.module.css
+++ b/src/pages/main-components/Navbar.module.css
@@ -1,41 +1,58 @@
 .navbar {
-    padding: 2vw;
+    position: fixed;
+    top: 0;
+    width: 96vw;
+    padding: 2vh 2vw;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0.8) 100%);
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
     -webkit-user-select: none;
     user-select: none;
 }
 
 .logo {
-    margin-left: auto;
-    margin-right: auto;
-    z-index: 1;
+    margin-right: calc(50% - 50px);
 }
 
 .logo img {
-    width: 125px;
-    height: 75px;
+    width: 100px;
+    height: 60px;
 }
 
-
-.menu nav {
-    opacity: 0;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-image: linear-gradient(110deg, rgb(131, 31, 123), rgba(156, 76, 149, 0.8), rgba(168, 98, 163, 0.6), rgba(181, 121, 176, 0.4), rgba(193, 143, 189, 0.2));
-    transition: all 0.8s linear;
+.menu button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 32px;
 }
 
+.menu span {
+    display: block;
+    width: 34px;
+    height: 3px;
+    margin-bottom: 5px;
+    border-radius: 2px;
+    background-color: #030D04;
+}
 
 .menu ul {
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-140px, 0);
+    position: absolute;
+    top: 2vh;
+    left: 0;
     width: 140px;
-    padding-left: 2vw;
-    margin-top: 100px;
+    margin: 0;
+    padding: 12px 22px 12px 2vw;
+    border: #030D04 1px solid;
+    border-top-right-radius: 12px;
+    border-bottom-right-radius: 12px;
+    background-color: #1F8327;
+    transition: all 0.2s ease;
 }
 
 .menu a {
@@ -50,114 +67,58 @@
 .menu li {
     font-size: 20px;
     font-weight: 600;
+    margin: 18px 0;
     border: rgba(3, 13, 4, 0.5) 1px solid;
     border-radius: 8px;
     padding: 5px 8px;
     list-style: none;
-    margin: 20px 0 20px 0;
-    transition: transform 0.2s ease;
 }
 
 .menu li:nth-of-type(1) {
-    transform: translate(-200px, 0);
+    transform: translate(-400px, 0);
     transition: all 0.5s ease;
 }
 
 .menu li:nth-of-type(2) {
-    transform: translate(-200px, 0);
+    transform: translate(-400px, 0);
     transition: all 0.7s ease;
     transition-delay: 0.1;
 }
 
 .menu li:nth-of-type(3) {
-    transform: translate(-200px, 0);
+    transform: translate(-400px, 0);
     transition: all 0.9s ease;
     transition-delay: 0.2;
 }
 
 .menu li:nth-of-type(4) {
-    transform: translate(-200px, 0);
+    transform: translate(-400px, 0);
     transition: all 1.1s ease;
     transition-delay: 0.3;
-}
-
-.menu li:hover {
-    background-color: rgba(3, 13, 4, 0.1);
 }
 
 .menu li:active {
     translate: 0 18px;
 }
 
-.menu input {
-    width: 40px;
-    height: 30px;
-    margin-top: -6px;
-    margin-left: -4px;
-    position: absolute;
-    z-index: 2;
-    cursor: pointer;
-    opacity: 0;
-}
-
-.menu span {
-    display: block;
-    width: 34px;
-    height: 3px;
-    margin-bottom: 5px;
-    border-radius: 3px;
-    background-color: #030D04;
-    position: relative;
-    z-index: 1;
-}
-
-.menu span:nth-of-type(1) {
-    transform-origin: 4px 0px;
-    transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition-delay: 0.1s;
-}
-
-.menu span:nth-of-type(2) {
-    transition: width 0.5s linear,
-        opacity 0.6s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-.menu span:nth-of-type(3) {
-    transform-origin: 0% 100%;
-    transition: all 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition-delay: 0.3s;
-}
-
-.menu input:checked~span:nth-of-type(1) {
-    transform: rotate(45deg) translate(-3px, -3px);
-}
-
-.menu input:checked~span:nth-of-type(2) {
-    width: 0;
-    opacity: 0;
-}
-
-.menu input:checked~span:nth-of-type(3) {
-    transform: rotate(-45deg);
-}
-
-.menu input:checked~nav {
+.menu button:focus~ul {
     opacity: 1;
     pointer-events: all;
-}
-
-.menu input:checked~nav li:nth-of-type(1) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(2) {
+.menu button:focus~ul li:nth-of-type(1) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(3) {
+.menu button:focus~ul li:nth-of-type(2) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(4) {
+.menu button:focus~ul li:nth-of-type(3) {
+    transform: translate(0);
+}
+
+.menu button:focus~ul li:nth-of-type(4) {
     transform: translate(0);
 }
