--- a/src/pages/home/componets/body.module.css
+++ b/src/pages/home/componets/body.module.css
@@ -1,10 +1,9 @@
 .cover {
-    background-color: #fafafa;
-    margin-top: calc(64px + 4vh);
+    background-color: var(--surface1);
+    padding-top: calc(64px + 4vh);
 }
 
 .body {
-    color: #010502;
     padding: 2%;
     max-width: 1280px;
     margin: 0 auto 0 auto;
@@ -17,8 +16,11 @@
 
 .container {
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
-    background: rgba(250, 250, 250, 0.8);
-    background: linear-gradient(90deg, rgba(250, 250, 250, 1) 40%, rgba(250, 250, 250, 0.5) 80%, rgba(250, 250, 250, 0) 100%);
+    background: hsla(var(--surface1-values), 0.8);
+    background: linear-gradient(90deg,
+            hsla(var(--surface1-values), 1) 40%,
+            hsla(var(--surface1-values), 0.5) 80%,
+            hsla(var(--surface1-values), 0) 100%);
     width: auto;
     width: 600px;
     display: flex;
@@ -29,13 +31,18 @@
 .container h1 {
     margin: 0;
     font-weight: 600;
+    color: var(--text2);
+}
+
+.container p {
+    color: var(--text3);
 }
 
 .container button {
-    color: #1F8327;
+    color: var(--main);
     padding: 6px 10px;
     background: transparent;
-    border: solid 1px rgba(31, 131, 39, 0.4);
+    border: solid 1px var(--main);
     border-radius: 4px;
     -webkit-user-select: none;
     user-select: none;
@@ -62,16 +69,14 @@
 }
 
 .container button:hover {
-    color: #000;
-    border-color: #dcdcdc;
+    color: var(--text2);
+    border-color: var(--border2);
     transform: translate(4px, 0);
 }
 
 .container button:active {
-    background: rgba(31, 132, 39, 0.6);
+    background: var(--button);
     transform: translate(16px, 0);
-    /* transform: scale(0.97); */
-    /* box-shadow: 7px 5px 56px -10px #C3D900; */
 }
 
 .container_apps {
@@ -84,12 +89,117 @@
     align-items: flex-start;
 }
 
+/*.container_contact div:nth-of-type(2) {
+    display: none;
+}
+
+.container_contact_box div:nth-of-type(2) {
+    display: block !important;
+    width: 300px;
+}
+
+.container_contact_box {
+    width: 700px;
+    height: auto;
+    padding: 32px;
+    background: #fafafa;
+    border-radius: 6px;
+    border: solid 1px rgba(1, 5, 2, 0.5);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.container_contact_box form {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.container_contact_box form section {
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.container_contact_box :where(input[type='text'], input[type='email'], textarea) {
+    font-size: 14px;
+    padding: 2px 8px;
+    background: transparent;
+    border: none;
+    border-bottom: solid 2px rgba(31, 131, 39, 0.6);
+}
+
+.container_contact_box :where(input[type='text'], input[type='email'], textarea):focus {
+    outline: none;
+}
+
+.container_contact_box textarea {
+    resize: none;
+}
+
+.container_contact_box label {
+    font-size: 13px;
+    transform: translate(4px, -32px);
+    pointer-events: none;
+    transition: 0.2s ease all;
+}
+
+.container_contact_box input:focus+label,
+.container_contact_box input:valid+label {
+    color: rgba(31, 131, 39, 0.6);
+    transform: translate(0, -48px);
+}
+
+.container_contact_box textarea:focus+label,
+.container_contact_box textarea:valid+label {
+    color: rgba(31, 131, 39, 0.6);
+    transform: translate(0, -80px);
+}
+
+.container_contact_box input[type='submit'] {
+    font-size: 14px;
+    font-weight: 700;
+    color: #fafafa;
+    padding: 4px 0;
+    background-color: #1F8327;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.8s ease;
+}
+
+.container_contact_box input[type='submit']:hover {
+    background-color: rgba(31, 131, 39, 0.8);
+}
+
+.container_contact_box input[type='submit']:active {
+    background-color: rgba(31, 131, 39, 0.2);
+}
+
+
+.container_contact_box div:nth-of-type(2) p {
+    font-size: 12px;
+    color: #4b4b4b;
+}
+
+.container_contact_box div:nth-of-type(2) a {
+    color: #4b4b4b;
+}
+
+.container_contact_box div:nth-of-type(2) a:hover {
+    color: #1F8327;
+} */
+
 .container_connect {
     height: 200px;
     margin: 0 auto 0 auto;
     align-items: center;
     width: auto;
-    background: linear-gradient(60deg, rgba(250, 250, 250, 1) 20%, rgba(250, 250, 250, 0) 60%, rgba(250, 250, 250, 0) 100%);
+    background: linear-gradient(60deg,
+            hsla(var(--surface1-values), 1) 40%,
+            hsla(var(--surface1-values), 0) 50%);
 }
 
 .container_connect section {
@@ -114,7 +224,7 @@
     letter-spacing: 1px;
     padding: 2px 8px;
     background-color: transparent;
-    border: solid 1px rgba(31, 131, 39, 0.6);
+    border: solid 1px var(--button);
     border-radius: 6px 0 0 6px;
     transition: all 1s ease;
 }
@@ -122,11 +232,11 @@
 .container_connect input[type='email']:focus {
     outline: none;
     width: 200px;
-    background-color: rgba(31, 131, 39, 0.1);
+    background-color: var(--surface2);
 }
 
 .container_connect input[type='submit'] {
-    background-color: rgba(31, 131, 39, 0.6);
+    background-color: var(--button);
     border: none;
     border-radius: 0 6px 6px 0;
     cursor: pointer;
