--- a/src/pages/main-components/Navbar.module.css
+++ b/src/pages/main-components/Navbar.module.css
@@ -3,8 +3,10 @@
     top: 0;
     width: 96vw;
     padding: 2vh 2vw;
-    background: rgb(255, 255, 255);
-    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 60%, rgba(255, 255, 255, 0.8) 100%);
+    background: var(--surface1);
+    background: linear-gradient(180deg,
+            hsla(var(--surface1-values), 1) 20%,
+            hsla(var(--surface1-values), 0.8) 100%);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -22,11 +24,15 @@
     height: 60px;
 }
 
-.menu button {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    font-size: 32px;
+.menu input {
+    width: 40px;
+    height: 30px;
+    margin-top: -6px;
+    margin-left: -4px;
+    position: absolute;
+    z-index: 2;
+    cursor: pointer;
+    opacity: 0;
 }
 
 .menu span {
@@ -34,91 +40,129 @@
     width: 34px;
     height: 3px;
     margin-bottom: 5px;
-    border-radius: 2px;
-    background-color: #030D04;
+    border-radius: 3px;
+    background-color: var(--text1);
+    position: relative;
+    z-index: 1;
+}
+
+.menu span:nth-of-type(1) {
+    transform-origin: 0% 100%;
+    transition: all 0.4s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition-delay: 0.1s;
+}
+
+.menu span:nth-of-type(2) {
+    transition: width 0.4s linear,
+        opacity 0.6s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+}
+
+.menu span:nth-of-type(3) {
+    transform-origin: 0% 100%;
+    transition: all 0.4s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    transition-delay: 0.3s;
 }
 
 .menu ul {
     opacity: 0;
     pointer-events: none;
-    transform: translate(-140px, 0);
     position: absolute;
-    top: 2vh;
+    top: 0;
     left: 0;
-    width: 140px;
+    width: calc(200px + 5vw);
+    height: 100vh;
     margin: 0;
-    padding: 12px 22px 12px 2vw;
-    border: #030D04 1px solid;
-    border-top-right-radius: 12px;
-    border-bottom-right-radius: 12px;
-    background-color: #1F8327;
-    transition: all 0.2s ease;
-}
-
-.menu a {
-    text-decoration: none;
-    color: #030D04;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 5px;
+    padding-top: 72px;
+    padding-left: 0;
+    list-style: none;
+    border-right: var(--border1) 1px solid;
+    background-color: var(--surface4);
+    transition: all 0.2s linear;
 }
 
 .menu li {
-    font-size: 20px;
-    font-weight: 600;
-    margin: 18px 0;
-    border: rgba(3, 13, 4, 0.5) 1px solid;
-    border-radius: 8px;
-    padding: 5px 8px;
-    list-style: none;
+    border-bottom: var(--border2) 1px solid;
+    transition: all 0.2s linear;
 }
 
 .menu li:nth-of-type(1) {
-    transform: translate(-400px, 0);
-    transition: all 0.5s ease;
+    border-top: var(--border2) 1px solid;
 }
 
-.menu li:nth-of-type(2) {
-    transform: translate(-400px, 0);
-    transition: all 0.7s ease;
-    transition-delay: 0.1;
-}
-
-.menu li:nth-of-type(3) {
-    transform: translate(-400px, 0);
-    transition: all 0.9s ease;
-    transition-delay: 0.2;
-}
-
-.menu li:nth-of-type(4) {
-    transform: translate(-400px, 0);
-    transition: all 1.1s ease;
-    transition-delay: 0.3;
+.menu li:hover {
+    background-color: var(--surface1);
 }
 
 .menu li:active {
     translate: 0 18px;
 }
 
-.menu button:focus~ul {
+.menu a {
+    font-size: 20px;
+    font-weight: 600;
+    color: var(--text1);
+    text-decoration: none;
+    padding: 12px;
+    padding-left: 2vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu li:nth-of-type(1) a {
+    transform: translate(-400px, 0);
+    transition: all 0.5s ease;
+}
+
+.menu li:nth-of-type(2) a {
+    transform: translate(-400px, 0);
+    transition: all 0.7s ease;
+    transition-delay: 0.1;
+}
+
+.menu li:nth-of-type(3) a {
+    transform: translate(-400px, 0);
+    transition: all 0.9s ease;
+    transition-delay: 0.2;
+}
+
+.menu li:nth-of-type(4) a {
+    transform: translate(-400px, 0);
+    transition: all 1.1s ease;
+    transition-delay: 0.3;
+}
+
+.menu input:checked~ul {
     opacity: 1;
     pointer-events: all;
     transform: translate(0);
 }
 
-.menu button:focus~ul li:nth-of-type(1) {
+.menu input:checked~ul li:nth-of-type(1) a {
     transform: translate(0);
 }
 
-.menu button:focus~ul li:nth-of-type(2) {
+.menu input:checked~ul li:nth-of-type(2) a {
     transform: translate(0);
 }
 
-.menu button:focus~ul li:nth-of-type(3) {
+.menu input:checked~ul li:nth-of-type(3) a {
     transform: translate(0);
 }
 
-.menu button:focus~ul li:nth-of-type(4) {
+.menu input:checked~ul li:nth-of-type(4) a {
     transform: translate(0);
+}
+
+.menu input:checked~span:nth-of-type(1) {
+    transform: rotate(45deg) translate(-7px, -4px);
+}
+
+.menu input:checked~span:nth-of-type(2) {
+    width: 0;
+    opacity: 0;
+}
+
+.menu input:checked~span:nth-of-type(3) {
+    transform: rotate(-45deg);
 }
