--- a/src/pages/main-components/footer.module.css
+++ b/src/pages/main-components/footer.module.css
@@ -1,7 +1,8 @@
 .footer {
     font-size: smaller;
-    color: #768077;
+    color: var(--text4);
     padding: 1vw;
+    background-color: var(--surface3);
     display: flex;
     flex-direction: row;
     gap: 18px;
@@ -22,9 +23,9 @@
 }
 
 .footer a:hover {
-    color: #551A8B;
+    color: var(--main);
 }
 
 .footer a:active {
-    color: #0000EE;
+    color: var(--main);
 }
