--- a/src/pages/home/componets/body.module.css
+++ b/src/pages/home/componets/body.module.css
@@ -1,4 +1,4 @@
-.cover {
+.body_overlay {
     background-color: var(--surface1);
     padding-top: calc(64px + 4vh);
 }
@@ -88,109 +88,6 @@
     height: 300px;
     align-items: flex-start;
 }
-
-/*.container_contact div:nth-of-type(2) {
-    display: none;
-}
-
-.container_contact_box div:nth-of-type(2) {
-    display: block !important;
-    width: 300px;
-}
-
-.container_contact_box {
-    width: 700px;
-    height: auto;
-    padding: 32px;
-    background: #fafafa;
-    border-radius: 6px;
-    border: solid 1px rgba(1, 5, 2, 0.5);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.container_contact_box form {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-}
-
-.container_contact_box form section {
-    display: flex;
-    flex-direction: row;
-    gap: 8px;
-}
-
-.container_contact_box :where(input[type='text'], input[type='email'], textarea) {
-    font-size: 14px;
-    padding: 2px 8px;
-    background: transparent;
-    border: none;
-    border-bottom: solid 2px rgba(31, 131, 39, 0.6);
-}
-
-.container_contact_box :where(input[type='text'], input[type='email'], textarea):focus {
-    outline: none;
-}
-
-.container_contact_box textarea {
-    resize: none;
-}
-
-.container_contact_box label {
-    font-size: 13px;
-    transform: translate(4px, -32px);
-    pointer-events: none;
-    transition: 0.2s ease all;
-}
-
-.container_contact_box input:focus+label,
-.container_contact_box input:valid+label {
-    color: rgba(31, 131, 39, 0.6);
-    transform: translate(0, -48px);
-}
-
-.container_contact_box textarea:focus+label,
-.container_contact_box textarea:valid+label {
-    color: rgba(31, 131, 39, 0.6);
-    transform: translate(0, -80px);
-}
-
-.container_contact_box input[type='submit'] {
-    font-size: 14px;
-    font-weight: 700;
-    color: #fafafa;
-    padding: 4px 0;
-    background-color: #1F8327;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: all 0.8s ease;
-}
-
-.container_contact_box input[type='submit']:hover {
-    background-color: rgba(31, 131, 39, 0.8);
-}
-
-.container_contact_box input[type='submit']:active {
-    background-color: rgba(31, 131, 39, 0.2);
-}
-
-
-.container_contact_box div:nth-of-type(2) p {
-    font-size: 12px;
-    color: #4b4b4b;
-}
-
-.container_contact_box div:nth-of-type(2) a {
-    color: #4b4b4b;
-}
-
-.container_contact_box div:nth-of-type(2) a:hover {
-    color: #1F8327;
-} */
 
 .container_connect {
     height: 200px;
