--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -22,9 +22,14 @@ body {
   --border1: hsl(var(--main-hue), 30%, 70%);
   --border2: hsl(var(--main-hue), 20%, 75%);
   --button: hsl(var(--main-hue), 30%, 60%);
+  --button-hover: hsl(var(--main-hue), 30%, 70%);
   --surface1: hsl(var(--main-hue), 25%, 90%);
   --surface1-values: var(--main-hue), 25%, 90%;
   --surface2: hsl(var(--main-hue), 20%, 99%);
+  --surface2-values: var(--main-hue), 20%, 99%;
   --surface3: hsl(var(--main-hue), 20%, 92%);
   --surface4: hsl(var(--main-hue), 20%, 85%);
+  --surface5: hsl(var(--main-hue), 30%, 80%);
+
+  font-size: 14px;
 }
