--- a/src/pages/home/componets/cont-modal.module.css
+++ b/src/pages/home/componets/cont-modal.module.css
@@ -27,95 +27,170 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 300px;
-    padding: 40px 32px 32px 32px;
-    border-radius: 6px;
+    width: 350px;
+    height: 28rem;
+    padding: 2rem;
+    border-radius: 0.8rem;
     background: var(--surface4);
-    box-shadow: 0px 0px 60px -10px var(--surface2);
+    box-shadow: 0px 0px 60px 0px var(--surface2);
 }
 
-.modal form {
+.closingicon {
+    position: absolute;
+    top: 0.6rem;
+    right: 1rem;
+    cursor: pointer;
+}
+
+.modal h1 {
+    margin: 1rem 0 1.4rem;
+}
+
+.tabs {
+    padding: 0.2rem;
+    border-radius: 0.4rem;
+    background-color: var(--surface1);
+    margin-bottom: 2rem;
+    display: flex;
+    position: relative;
+}
+
+.tabs input {
+    display: none;
+}
+
+.tabs label {
+    width: calc(100% / 2);
+    padding: 0.4rem;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 1;
+}
+
+.tabs span {
+    width: calc((100% - 0.5rem) / 2);
+    border-radius: 0.6rem;
+    background-color: var(--button-hover);
+    position: absolute;
+    top: 0.2rem;
+    bottom: 0.2rem;
+    transition: 0.15s ease, transform 0.25s ease-out;
+}
+
+.tabs input:nth-of-type(1):checked~span {
+    transform: translateX(0);
+}
+
+.tabs input:nth-of-type(2):checked~span {
+    transform: translateX(100%);
+}
+
+.emails {
     display: flex;
     flex-direction: column;
+    gap: 1rem;
 }
 
-.modal :where(input[type='text'], input[type='email'], textarea) {
-    font-size: 14px;
-    margin-bottom: 10px;
-    padding: 2px 8px;
+.emails li {
+    display: flex;
+    gap: 0.8rem;
+    align-items: center;
+}
+
+.emails a {
+    color: inherit;
+    font-size: 1rem;
+    letter-spacing: 0.15rem;
+    line-height: 1.4rem;
+    text-decoration: none;
+    transition: all 0.2s ease;
+}
+
+.emails a:hover {
+    color: var(--main);
+    transform: translateX(0.1rem);
+    letter-spacing: 0.2rem;
+}
+
+.contact_form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+}
+
+.contact_form section {
+    position: relative;
+}
+
+.contact_form label {
+    position: absolute;
+    top: 0.4rem;
+    left: 0.4rem;
+    color: var(--text5);
+    letter-spacing: 0.1rem;
+    padding: 0.2rem 0.4rem;
+    border-radius: 0.5rem;
+    background-color: var(--surface3);
+    pointer-events: none;
+    transform-origin: 0 50%;
+    transition: all 0.2s ease;
+}
+
+.contact_form :where(input[type='text'], input[type='email'], textarea) {
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.8rem 0.6rem 0.4rem;
     border: none;
-    border-bottom: solid 2px var(--main);
-    background: transparent;
-    resize: none;
-    transition: background 0.3s linear;
-}
-
-.modal :where(input[type='text'], input[type='email'], textarea):focus {
+    border-radius: 0.4rem;
+    background: var(--surface3);
     outline: none;
 }
 
-.modal label {
-    font-size: 13px;
-    color: var(--text2);
-    transform: translate(4px, -32px);
-    pointer-events: none;
-    transition: 0.2s ease all;
+.contact_form section:nth-of-type(3) input {
+    letter-spacing: normal;
+    text-transform: uppercase;
 }
 
-.modal input:focus,
-.modal input:valid {
-    background: var(--surface2);
+.contact_form textarea {
+    letter-spacing: normal;
+    resize: none;
 }
 
-.modal textarea:focus,
-.modal textarea:valid {
-    background: var(--surface2);
+.contact_form input:focus~label,
+.contact_form input:not(:placeholder-shown)~label {
+    transform: translate(0.6rem, -1.2rem) scale(0.9);
+    letter-spacing: normal;
 }
 
-.modal input:focus+label,
-.modal input:valid+label {
-    transform: translate(0, -50px);
+.contact_form textarea:focus~label,
+.contact_form textarea:not(:placeholder-shown)~label {
+    transform: translate(0.6rem, -1.2rem) scale(0.9);
+    letter-spacing: normal;
 }
 
-
-.modal textarea:focus+label,
-.modal textarea:valid+label {
-    transform: translate(0, -82px);
-}
-
-.modal input[type='submit'] {
-    font-size: 14px;
+.contact_form input[type='submit'] {
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
     color: var(--surface2);
-    padding: 4px 0;
+    padding: 0.4rem;
     background-color: var(--main);
     border: none;
-    border-radius: 4px;
+    border-radius: 0.4rem;
     cursor: pointer;
-    transition: all 0.8s ease;
+    transition: all 0.3s linear;
 }
 
-.modal input[type='submit']:active {
-    transform: translate(20px, 0);
+.contact_form input[type='submit']:active {
+    background-color: var(--button);
 }
 
-.modal img {
-    position: absolute;
-    top: 8px;
-    right: 12px;
-    cursor: pointer;
-    user-select: none;
-}
-
-.modal p {
-    font-size: 12px;
-    color: var(--text3);
-    margin-bottom: 0;
-}
-
-.modal a {
+/* .modal a {
     color: var(--text3);
 }
 
 .modal a:hover {
     color: var(--main);
-}
+} */
