--- a/src/pages/main-components/deleted-code.css
+++ b/src/pages/main-components/deleted-code.css
@@ -3,6 +3,10 @@
     box-shadow: 7px 5px 56px -10px #C3D900;
 }
 
+.dfjd {
+    box-shadow: inset 0 1px 1px #ddd, 0 2px 3px #ccc;
+}
+
 
 * {
     --brand-hue: 125;
