--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,22 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
+}
+
+:root {
+  font-size: 16px;
+}
+
+@media screen and (max-width: 840px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  :root {
+    font-size: 12px;
+  }
 }
 
 :root {
@@ -32,6 +47,4 @@ body {
   --surface3-values: var(--main-hue), 20%, 92%;
   --surface4: hsl(var(--main-hue), 20%, 85%);
   --surface5: hsl(var(--main-hue), 30%, 80%);
-
-  font-size: 14px;
 }
