--- a/src/pages/apps/componets/body.module.css
+++ b/src/pages/apps/componets/body.module.css
@@ -1,8 +1,10 @@
 .body_overlay {
-    background: var(--surface1);
-    background: linear-gradient(180deg, var(--surface1) 34vw, var(--surface2) 34vw);
+    background-color: var(--surface2);
+    background-image: linear-gradient(180deg,
+            var(--surface1) 34vw,
+            var(--surface2) 34vw);
     background-attachment: fixed;
-    padding-top: calc(64px + 2vh);
+    padding-top: 4.4rem;
 }
 
 .body {
@@ -17,12 +19,13 @@
 }
 
 .container {
-    width: 500px;
+    width: 520px;
     padding: 2.4rem;
     margin-top: 2rem;
     border: 1px solid var(--border1);
     border-radius: 1.2rem;
     background: hsla(var(--surface3-values), 0.9);
+    box-shadow: inset 0 1px 1px #ddd, 0 2px 3px #ccc;
     margin-bottom: 400px;
 }
 
@@ -49,5 +52,31 @@
     padding-left: 0;
     margin: 0 0 0 auto;
     display: flex;
-    gap: 1.4rem;
+    flex-wrap: wrap;
+    gap: 1.2rem;
+}
+
+@media screen and (min-width: 1280px) {
+    .body_overlay {
+        background-image: linear-gradient(180deg,
+                var(--surface1) 446px,
+                var(--surface2) 446px);
+    }
+
+    .body {
+        background-size: 1280px 560px;
+        background-position: top;
+    }
+}
+
+@media screen and (max-width: 840px) {
+    .body {
+        background-image: url(./assets/web_illustration-840x480.png);
+    }
+}
+
+@media screen and (max-width: 620px) {
+    .container {
+        width: auto;
+    }
 }
