--- a/src/pages/main-components/Navbar.module.css
+++ b/src/pages/main-components/Navbar.module.css
@@ -2,10 +2,10 @@
     position: fixed;
     top: 0;
     width: 96vw;
-    padding: 1vh 2vw;
+    padding: 0 2vw;
     background: var(--surface1);
     background: linear-gradient(180deg,
-            hsla(var(--surface1-values), 1) 20%,
+            hsla(var(--surface1-values), 1) 30%,
             hsla(var(--surface1-values), 0.8) 100%);
     display: flex;
     flex-direction: row;
@@ -16,19 +16,18 @@
 }
 
 .logo {
-    margin-right: calc(50% - 50px);
+    margin-right: calc(50% - 3.5rem);
 }
 
 .logo img {
-    width: 100px;
-    height: 60px;
+    width: 7rem;
+    height: 4.2rem;
 }
 
 .menu input {
-    width: 40px;
-    height: 30px;
-    margin-top: -6px;
-    margin-left: -4px;
+    width: 2rem;
+    height: 2rem;
+    margin-top: -0.4rem;
     position: absolute;
     z-index: 2;
     cursor: pointer;
@@ -37,10 +36,10 @@
 
 .menu span {
     display: block;
-    width: 34px;
-    height: 3px;
-    margin-bottom: 5px;
-    border-radius: 3px;
+    width: 2.4rem;
+    height: 0.2rem;
+    margin-bottom: 0.3rem;
+    border-radius: 0.3rem;
     background-color: var(--text1);
     position: relative;
     z-index: 1;
@@ -86,8 +85,8 @@
     width: calc(200px + 5vw);
     height: 100vh;
     margin: 0;
-    padding-top: 72px;
     padding-left: 0;
+    padding-top: 5rem;
     list-style: none;
     border-right: var(--border1) 1px solid;
     background-color: var(--surface4);
@@ -112,11 +111,11 @@
 }
 
 .menu a {
-    font-size: 20px;
+    font-size: 1.5rem;
     font-weight: 600;
     color: var(--text1);
     text-decoration: none;
-    padding: 12px;
+    padding: 0.8rem;
     padding-left: 2vw;
     display: flex;
     align-items: center;
@@ -169,7 +168,7 @@
 }
 
 .menu input:checked~span:nth-of-type(1) {
-    transform: rotate(45deg) translate(-7px, -4px);
+    transform: rotate(45deg) translate(-0.56rem, -0.38rem);
 }
 
 .menu input:checked~span:nth-of-type(2) {
