--- a/src/pages/main-components/footer.module.css
+++ b/src/pages/main-components/footer.module.css
@@ -1,11 +1,11 @@
 .footer {
-    font-size: smaller;
+    font-size: small;
     color: var(--text4);
     padding: 1vw;
     background-color: var(--surface2);
     display: flex;
     flex-direction: row;
-    gap: 18px;
+    gap: 1.2rem;
     -webkit-user-select: none;
     user-select: none;
 }
@@ -15,7 +15,7 @@
     list-style: none;
     display: flex;
     flex-direction: row;
-    gap: 12px;
+    gap: 0.8rem;
 }
 
 .footer a {
