--- a/src/pages/apps/componets/body.module.css
+++ b/src/pages/apps/componets/body.module.css
@@ -1,8 +1,8 @@
 .body_overlay {
     background-color: var(--surface2);
     background-image: linear-gradient(180deg,
-            var(--surface1) 34vw,
-            var(--surface2) 34vw);
+            var(--surface5) 34vw,
+            var(--surface1) 34vw);
     background-attachment: fixed;
     padding-top: 4.4rem;
 }
@@ -24,9 +24,10 @@
     margin-top: 2rem;
     border: 1px solid var(--border1);
     border-radius: 1.2rem;
-    background: hsla(var(--surface3-values), 0.9);
+    background: hsla(var(--surface4-hsl), 0.9);
     box-shadow: inset 0 1px 1px #ddd, 0 2px 3px #ccc;
     margin-bottom: 400px;
+    animation: fadeAndMove 0.6s ease 10ms;
 }
 
 .container h1 {
@@ -56,11 +57,27 @@
     gap: 1.2rem;
 }
 
+.container ul img {
+    animation: fadeAndMove 0.8s ease;
+}
+
+@keyframes fadeAndMove {
+    from {
+        opacity: 0;
+        transform: translate(-100px) scale(1.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0) scale(1);
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .body_overlay {
         background-image: linear-gradient(180deg,
-                var(--surface1) 446px,
-                var(--surface2) 446px);
+                var(--surface5) 446px,
+                var(--surface1) 446px);
     }
 
     .body {
