--- a/src/pages/home/componets/body.module.css
+++ b/src/pages/home/componets/body.module.css
@@ -1,8 +1,8 @@
 .body_overlay {
-    background-color: var(--surface2);
+    background-color: var(--surface1);
     background-image: linear-gradient(180deg,
-            var(--surface1) 34vw,
-            var(--surface2) 34vw);
+            var(--surface6) 34vw,
+            var(--surface1) 34vw);
     background-attachment: fixed;
     padding-top: 4.4rem;
 }
@@ -25,6 +25,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    animation: fadeAndMove 0.6s ease 10ms;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
@@ -41,18 +42,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
+    animation: fadeAndMove 0.6s ease 10ms;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
 .container_contact p {
     font-size: 1rem;
-    color: var(--text3);
+    color: var(--text2);
     margin-top: 0.2rem;
 }
 
 .container_contact button {
-    color: var(--main);
-    border-color: var(--main);
+    color: var(--brand);
+    border-color: var(--brand);
     background: transparent;
     padding: 0.3rem 0.6rem;
 }
@@ -68,12 +70,13 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    animation: fadeAndMove 0.6s ease 10ms;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
 .container_connect p {
     font-size: 1rem;
-    color: var(--text3);
+    color: var(--text2);
     text-align: center;
     margin-top: 0.2rem;
 }
@@ -100,29 +103,37 @@
     letter-spacing: 0.05rem;
     padding: 0.1rem 0.5rem;
     background-color: transparent;
-    border: solid 1px var(--button);
+    border: solid 1px var(--button1);
     border-radius: 0.4rem 0 0 0.4rem;
+    outline: none;
     transition: all 1s ease;
 }
 
-.container_connect input[type='email']:focus {
-    outline: none;
-    background-color: var(--surface2);
-}
-
 .container_connect input[type='submit'] {
-    background-color: var(--button);
+    background-color: var(--button1);
     border: none;
     border-radius: 0 0.4rem 0.4rem 0;
     cursor: pointer;
     transition: all 0.5s ease;
 }
 
+@keyframes fadeAndMove {
+    from {
+        opacity: 0;
+        transform: translate(-100px) scale(1.1);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0px) scale(1);
+    }
+}
+
 @media screen and (min-width: 1280px) {
     .body_overlay {
         background-image: linear-gradient(180deg,
-                var(--surface1) 446px,
-                var(--surface2) 446px);
+                var(--surface6) 446px,
+                var(--surface1) 446px);
     }
 
     .body {
