--- a/src/pages/home/componets/cont-modal.module.css
+++ b/src/pages/home/componets/cont-modal.module.css
@@ -4,8 +4,9 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: hsla(var(--surface1-values), 0.6);
+    background-color: hsla(var(--surface2-values), 0.6);
     opacity: 0;
+    z-index: 2;
     visibility: hidden;
     transform: scale(0.9);
     transition: visibility 0s linear 0.2s,
@@ -31,8 +32,8 @@
     height: 26rem;
     padding: 1.8rem;
     border-radius: 0.8rem;
-    background: var(--surface4);
-    box-shadow: 0px 0px 60px 0px #ddd;
+    background: var(--surface5);
+    box-shadow: 0px 0px 30px 0px #ddd;
 }
 
 .closingicon {
@@ -49,7 +50,7 @@
 .tabs {
     padding: 0.1rem;
     border-radius: 0.3rem;
-    background-color: var(--surface1);
+    background-color: var(--surface4);
     margin-bottom: 2rem;
     display: flex;
     position: relative;
@@ -71,7 +72,7 @@
 .tabs span {
     width: calc((100% - 0.5rem) / 2);
     border-radius: 0.6rem;
-    background-color: var(--button-hover);
+    background-color: var(--button2);
     position: absolute;
     top: 0.2rem;
     bottom: 0.2rem;
@@ -108,7 +109,7 @@
 }
 
 .emails a:hover {
-    color: var(--main);
+    color: var(--brand);
     transform: translateX(0.1rem);
     letter-spacing: 0.15rem;
 }
@@ -131,7 +132,7 @@
     letter-spacing: 0.05rem;
     padding: 0.1rem 0.4rem;
     border-radius: 0.4rem;
-    background-color: var(--surface3);
+    background-color: var(--surface2);
     pointer-events: none;
     transform-origin: 0 50%;
     transition: all 0.2s ease;
@@ -145,7 +146,7 @@
     padding: 0.8rem 0.5rem 0.3rem;
     border: none;
     border-radius: 0.4rem;
-    background: var(--surface3);
+    background: var(--surface2);
     outline: none;
 }
 
@@ -176,7 +177,7 @@
     letter-spacing: 0.1rem;
     color: var(--surface2);
     padding: 0.4rem;
-    background-color: var(--main);
+    background-color: var(--brand);
     border: none;
     border-radius: 0.4rem;
     cursor: pointer;
@@ -184,7 +185,7 @@
 }
 
 .contact_form input[type='submit']:active {
-    background-color: var(--button);
+    background-color: var(--button1);
 }
 
 @media screen and (max-width: 440px) {
