--- a/src/pages/home/elements/button.module.css
+++ b/src/pages/home/elements/button.module.css
@@ -1,6 +1,6 @@
 .button {
     padding: 0.4rem 0.6rem;
-    background: var(--button);
+    background: var(--button1);
     border: solid 1px var(--border2);
     border-radius: 0.3rem;
     -webkit-user-select: none;
@@ -33,8 +33,8 @@
 }
 
 .button:active {
-    color: var(--main);
-    border-color: var(--main);
+    color: var(--brand);
+    border-color: var(--brand);
     background: transparent;
     transform: translate(8px, 0);
 }
