--- a/src/pages/main-components/Navbar.module.css
+++ b/src/pages/main-components/Navbar.module.css
@@ -3,10 +3,10 @@
     top: 0;
     width: 96vw;
     padding: 0 2vw;
-    background: var(--surface1);
+    background: var(--surface6);
     background: linear-gradient(180deg,
-            hsla(var(--surface1-values), 1) 30%,
-            hsla(var(--surface1-values), 0.8) 100%);
+            hsla(var(--surface6-values), 1) 30%,
+            hsla(var(--surface6-values), 0.8) 100%);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -17,6 +17,7 @@
 
 .logo {
     margin-right: calc(50% - 3.5rem);
+    z-index: 1;
 }
 
 .logo img {
@@ -38,7 +39,6 @@
     display: block;
     width: 2.4rem;
     height: 0.2rem;
-    margin-bottom: 0.3rem;
     border-radius: 0.3rem;
     background-color: var(--text1);
     position: relative;
@@ -46,20 +46,20 @@
 }
 
 .menu span:nth-of-type(1) {
-    transform-origin: 0% 100%;
-    transition: all 0.4s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition-delay: 0.1s;
+    margin-bottom: 0.3rem;
+    transition: translate 200ms cubic-bezier(0.77, 0.2, 0.05, 1.0),
+        rotate 250ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms;
 }
 
 .menu span:nth-of-type(2) {
-    transition: width 0.4s linear,
-        opacity 0.6s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    margin-bottom: 0.3rem;
+    transition: width 300ms linear,
+        opacity 500ms cubic-bezier(0.77, 0.2, 0.05, 1.0);
 }
 
 .menu span:nth-of-type(3) {
-    transform-origin: 0% 100%;
-    transition: all 0.4s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition-delay: 0.3s;
+    transition: translate 150ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 150ms,
+        rotate 300ms cubic-bezier(0.77, 0.2, 0.05, 1.0) 200ms;
 }
 
 .menu nav {
@@ -70,40 +70,31 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: row;
+    background: linear-gradient(120deg, var(--surface6) 22rem,
+            hsla(var(--surface2-values), 0.6) 28rem);
     transition: all 0.2s linear;
 }
 
-.menu nav div {
-    width: calc(95vw - 200px);
-    height: 100vh;
-    background: hsla(var(--surface1-values), 0.4)
-}
-
 .menu ul {
-    width: calc(200px + 5vw);
-    height: 100vh;
+    width: 10rem;
     margin: 0;
-    padding-left: 0;
-    padding-top: 5rem;
+    padding: 5rem 5rem 5rem 2vw;
     list-style: none;
-    border-right: var(--border1) 1px solid;
-    background-color: var(--surface4);
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     transition: all 0.2s linear;
 }
 
 .menu li {
-    border-bottom: var(--border2) 1px solid;
+    padding: 0.4rem 0.6rem;
+    border: #000 1px solid;
+    border-radius: 0.4rem;
     transition: all 0.2s linear;
 }
 
-.menu li:nth-of-type(1) {
-    border-top: var(--border2) 1px solid;
-}
-
 .menu li:hover {
-    background-color: var(--surface1);
+    background-color: var(--button1);
 }
 
 .menu li:active {
@@ -111,38 +102,33 @@
 }
 
 .menu a {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: 600;
     color: var(--text1);
     text-decoration: none;
-    padding: 0.8rem;
-    padding-left: 2vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.menu li:nth-of-type(1) a {
+.menu li:nth-of-type(1) {
     transform: translate(-400px, 0);
     transition: all 0.5s ease;
 }
 
-.menu li:nth-of-type(2) a {
+.menu li:nth-of-type(2) {
     transform: translate(-400px, 0);
-    transition: all 0.7s ease;
-    transition-delay: 0.1;
+    transition: all 0.7s ease 0.05s;
 }
 
-.menu li:nth-of-type(3) a {
+.menu li:nth-of-type(3) {
     transform: translate(-400px, 0);
-    transition: all 0.9s ease;
-    transition-delay: 0.2;
+    transition: all 0.9s ease 0.1s;
 }
 
-.menu li:nth-of-type(4) a {
+.menu li:nth-of-type(4) {
     transform: translate(-400px, 0);
-    transition: all 1.1s ease;
-    transition-delay: 0.3;
+    transition: all 1.1s ease 0.15s;
 }
 
 .menu input:checked~nav {
@@ -151,24 +137,26 @@
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(1) a {
+.menu input:checked~nav li:nth-of-type(1) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(2) a {
+.menu input:checked~nav li:nth-of-type(2) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(3) a {
+.menu input:checked~nav li:nth-of-type(3) {
     transform: translate(0);
 }
 
-.menu input:checked~nav li:nth-of-type(4) a {
+.menu input:checked~nav li:nth-of-type(4) {
     transform: translate(0);
 }
 
 .menu input:checked~span:nth-of-type(1) {
-    transform: rotate(45deg) translate(-0.56rem, -0.38rem);
+    width: 2.2rem;
+    translate: 0 0.5rem;
+    rotate: 45deg;
 }
 
 .menu input:checked~span:nth-of-type(2) {
@@ -177,5 +165,7 @@
 }
 
 .menu input:checked~span:nth-of-type(3) {
-    transform: rotate(-45deg);
+    width: 2.2rem;
+    translate: 0 -0.5rem;
+    rotate: -45deg;
 }
