--- a/src/pages/apps/componets/body.module.css
+++ b/src/pages/apps/componets/body.module.css
@@ -10,84 +10,149 @@
 }
 
 .container {
-    width: 800px;
-    padding: 2.4rem;
+    width: 840px;
+    padding: 2rem;
     border: 1px solid var(--border1);
     border-radius: 0.5rem;
     display: flex;
-    animation: fadeAndMove 0.6s ease 10ms;
+    justify-content: space-between;
+    flex-wrap: wrap;
     margin-top: 2rem;
     margin-bottom: 400px;
+    animation: fadeAndMove 0.6s ease;
 }
 
-.st_image {
-    width: 400px;
+.container abbr {
+    text-decoration: none;
 }
 
-.st_content {}
+.app_photos img {
+    height: 32rem;
+}
 
-.apps_heading {
+.app_content {
+    color: var(--text2);
+    width: 440px;
+}
+
+.app_heading {
     padding-bottom: 1rem;
-    margin-bottom: 2rem;
     border-bottom: solid 1px var(--border2);
     display: flex;
     align-items: center;
-    gap: 1rem;
+    gap: 0.8rem;
 }
 
-.apps_heading h1 {
-    color: var(--text2);
+.app_heading img {
+    width: 5rem;
 }
 
-.apps_heading p {
+.app_heading h1 {
     margin: 0;
 }
 
-.container h1 {
+.app_heading p {
     margin: 0;
-    font-weight: 600;
-    /* color: var(--text1); */
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+    letter-spacing: 0.04rem;
 }
 
-.container p {
-    color: var(--text2);
-}
-
-.container ul {
-    width: fit-content;
+.app_download ul {
     list-style: none;
     padding-left: 0;
-    margin: 0 0 0 auto;
+    margin: 1.8rem 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 1.2rem;
+    gap: 1rem;
 }
 
-.container ul img {
-    animation: fadeAndMove 0.8s ease;
+.app_download ul img {
+    height: 2.5rem;
+}
+
+.app_download section {
+    border: solid 1px var(--border2);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+}
+
+.app_download section p {
+    font-size: 0.92rem;
+    margin: 0;
+}
+
+.app_download section form {
+    height: 28px;
+    margin: 0 auto;
+    display: flex;
+}
+
+.app_download section input[type='email'] {
+    letter-spacing: 0.04rem;
+    padding: 0.1rem 0.5rem;
+    background-color: #fff;
+    border: solid 1px var(--black1);
+    border-radius: 0.4rem 0 0 0.4rem;
+    outline: none;
+    transition: all 0.2s ease;
+}
+
+.app_download section input[type='email']:focus {
+    scale: 1.2;
+}
+
+.app_download section input[type='email']:focus~input[type='submit'] {
+    scale: 1.2;
+}
+
+.app_download section input[type='submit'] {
+    color: #fff;
+    background-color: var(--black1);
+    border: none;
+    border-radius: 0 0.4rem 0.4rem 0;
+    cursor: pointer;
+    transition: all 0.2s ease;
 }
 
 @keyframes fadeAndMove {
     from {
         opacity: 0;
-        transform: translate(-100px) scale(1.1);
+        translate: 0 200px;
+        transform: skew(15deg, 25deg);
     }
 
     to {
         opacity: 1;
-        transform: translate(0) scale(1);
+        translate: 0;
+        transform: skew(0);
     }
 }
 
-@media screen and (min-width: 1280px) {}
+@media screen and (max-width: 960px) {
+    .container {
+        width: 440px;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 2rem;
+    }
 
-@media screen and (max-width: 840px) {}
+    .app_photos {
+        margin: auto;
+    }
 
-@media screen and (max-width: 620px) {
+    .app_content {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 520px) {
     .container {
         width: auto;
+    }
+
+    .app_download ul {
+        gap: 4px;
     }
 }
