--- a/src/pages/apps/elements/small-heading.module.css
+++ b/src/pages/apps/elements/small-heading.module.css
@@ -4,6 +4,7 @@
     text-transform: uppercase;
     color: var(--text1);
     margin: 0;
+    animation: fadeAndMove 0.6s;
 }
 
 .heading span {
@@ -13,4 +14,16 @@
 .heading::before {
     content: "——";
     margin-right: 0.6rem;
+}
+
+@keyframes fadeAndMove {
+    from {
+        opacity: 0;
+        translate: 100px 0;
+    }
+
+    to {
+        opacity: 1;
+        translate: 0;
+    }
 }
