--- a/src/pages/home/componets/body.module.css
+++ b/src/pages/home/componets/body.module.css
@@ -25,7 +25,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    animation: fadeAndMove 0.6s ease 10ms;
+    animation: fadeAndMove 0.6s ease;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
@@ -42,7 +42,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    animation: fadeAndMove 0.6s ease 10ms;
+    animation: fadeAndMove 0.6s ease;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
@@ -70,7 +70,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    animation: fadeAndMove 0.6s ease 10ms;
+    animation: fadeAndMove 0.6s ease;
     /* border: 1px solid rgba(0, 0, 0, 0.2); */
 }
 
@@ -120,12 +120,14 @@
 @keyframes fadeAndMove {
     from {
         opacity: 0;
-        transform: translate(-100px) scale(1.1);
+        translate: -100px;
+        scale: 1.2;
     }
 
     to {
         opacity: 1;
-        transform: translate(0px) scale(1);
+        translate: 0;
+        scale: 1;
     }
 }
 
