--- a/src/components/ContModal.module.css
+++ b/src/components/ContModal.module.css
@@ -60,7 +60,7 @@
     display: none;
 }
 
-.tabs label {
+.tabs section {
     width: calc(100% / 2);
     padding: 0.3rem;
     display: flex;
@@ -88,9 +88,23 @@
 }
 
 .emails {
+    position: absolute;
+    top: 8rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    opacity: 1;
+    pointer-events: all;
+    scale: 1;
+    translate: 0;
+    transition: all 0.3s ease;
+}
+
+.emails_hide {
+    opacity: 0;
+    pointer-events: none;
+    scale: 0.98;
+    translate: -30px 0;
 }
 
 .emails li {
@@ -118,6 +132,18 @@
     display: flex;
     flex-direction: column;
     gap: 1.4rem;
+    opacity: 1;
+    pointer-events: all;
+    scale: 1;
+    translate: 0;
+    transition: all 0.4s ease;
+}
+
+.contact_form_hide {
+    opacity: 0;
+    pointer-events: none;
+    scale: 0.98;
+    translate: 20px 0;
 }
 
 .contact_form section {
