--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -107,7 +107,7 @@
     translate: 0 18px;
 }
 
-.menu a {
+.menu nav i {
     font-size: 1.25rem;
     font-weight: 600;
     color: var(--text1);
@@ -115,6 +115,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-style: normal;
 }
 
 .menu li:nth-of-type(1) {
@@ -129,12 +130,12 @@
 
 .menu li:nth-of-type(3) {
     transform: translate(-400px, 0);
-    transition: all 0.9s ease 0.1s;
+    transition: all 0.8s ease 0.1s;
 }
 
 .menu li:nth-of-type(4) {
     transform: translate(-400px, 0);
-    transition: all 1.1s ease 0.15s;
+    transition: all 0.9s ease 0.15s;
 }
 
 .menu input:checked~nav {
