--- a/src/components/ContModal.module.css
+++ b/src/components/ContModal.module.css
@@ -29,11 +29,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 350px;
-    height: 26rem;
     padding: 1.8rem;
     border-radius: 0.8rem;
     background: var(--surface5);
     box-shadow: 0px 0px 30px 0px #ddd;
+    z-index: 10;
 }
 
 .closingicon {
@@ -51,7 +51,7 @@
     padding: 0.1rem;
     border-radius: 0.3rem;
     background-color: var(--surface4);
-    margin-bottom: 2rem;
+    margin-bottom: 2.2rem;
     display: flex;
     position: relative;
 }
@@ -131,7 +131,7 @@
 .contact_form {
     display: flex;
     flex-direction: column;
-    gap: 1.4rem;
+    gap: 1.6rem;
     opacity: 1;
     pointer-events: all;
     scale: 1;
@@ -154,7 +154,6 @@
     position: absolute;
     top: 0.2rem;
     left: 0.2rem;
-    color: var(--text5);
     letter-spacing: 0.05rem;
     padding: 0.1rem 0.4rem;
     border-radius: 0.4rem;
@@ -162,6 +161,30 @@
     pointer-events: none;
     transform-origin: 0 50%;
     transition: all 0.2s ease;
+}
+
+.contact_form p {
+    color: var(--error-text);
+    margin: 0;
+    position: absolute;
+    bottom: -1.1rem;
+    left: 0.2rem;
+}
+
+.textarea_label {
+    display: flex;
+    gap: 0.6rem;
+}
+
+.textarea_label span {
+    padding: 0.1rem 0.4rem;
+    border-radius: 0.4rem;
+    background-color: var(--button2);
+    border-radius: 0.4rem;
+}
+
+.textarea_label_error span {
+    background-color: var(--error-surface);
 }
 
 .contact_form :where(input[type='text'], input[type='email'], textarea) {
@@ -182,6 +205,7 @@
 }
 
 .contact_form textarea {
+    font-size: 1rem;
     letter-spacing: normal;
     resize: none;
 }
@@ -212,6 +236,10 @@
 
 .contact_form input[type='submit']:active {
     background-color: var(--button1);
+}
+
+.error_input {
+    outline: 2px dashed var(--error-surface)
 }
 
 @media screen and (max-width: 440px) {
