--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -23,9 +23,9 @@
 }
 
 .footer a:hover {
-    color: var(--brand);
+    color: var(--link);
 }
 
 .footer a:active {
-    color: var(--brand);
+    color: var(--link);
 }
