--- a/src/elements/Modal.module.css
+++ b/src/elements/Modal.module.css
@@ -5,7 +5,7 @@
     z-index: 2;
     width: 100%;
     height: 100%;
-    background-color: hsla(var(--surface2-values), 0.5);
+    background-color: rgba(var(--surface1_rgb), 0.5);
     opacity: 0;
     visibility: hidden;
     transition: visibility 0s linear 0.2s, opacity 0.2s ease,
