--- a/src/index.css
+++ b/src/index.css
@@ -45,31 +45,58 @@ body::-webkit-scrollbar-thumb:active {
 }
 
 :root {
-  --brand: #1f8327;
-  --brand-hsl: hsl(125, 62%, 32%);
-  --white1: hsl(125, 10%, 98%);
-  --white2: hsl(125, 10%, 92%);
-  --white3: hsl(125, 10%, 86%);
-  --black1: hsl(125, 10%, 2%);
-  --black2: hsl(125, 10%, 8%);
-  --black3: hsl(125, 10%, 14%);
+  --white1: #fafafa;
+  --white2: #f5f5f5;
+  --white3: #f0f0f0;
 
-  --text1: var(--black2);
-  --text2: var(--black3);
-  --text3: hsl(125, 10%, 28%);
+  --black1: #0a0a0a;
+  --black2: #141414;
+  --black3: #1e1e1e;
+
+  --grey1: #646464;
+  --grey2: #8c8c8c;
+  --grey3: #b4b4b4;
+  --grey4: #dcdcdc;
+
+  --red1: #af0000;
+  --red2: #af5050;
+
+  --primary: #6ec475;
+  --primary_lighten: #c5e7c8;
+  --primary_darken: #235728;
+  --primary_lighten2: #e2f3e3;
+
+  --secondary: #c46ebd;
+  --secondary_lighten: #e7c5e4;
+  --secondary_darken: #572353;
+
+  /* ------------------------------- */
+
+  --text1: var(--black1);
+  --text2: var(--black2);
+  --text3: var(--black3);
+
   --surface1: var(--white1);
+  --surface1_rgb: 250, 250, 250;
   --surface2: var(--white2);
   --surface3: var(--white3);
-  --surface4: hsl(125, 22%, 90%);
-  --surface5: hsl(125, 22%, 84%);
-  --surface6: hsl(125, 42%, 92%);
-  --surface1-values: 125, 10%, 98%;
-  --surface2-values: 125, 10%, 92%;
-  --surface6-values: 125, 42%, 92%;
-  --border1: hsl(125, 20%, 78%);
-  --border2: hsl(125, 20%, 86%);
-  --button1: hsl(125, 42%, 60%);
-  --button2: hsl(125, 42%, 70%);
-  --error-text: hsl(0, 98%, 44%);
-  --error-surface: hsl(0, 98%, 86%);
+  --surface4: var(--primary_lighten);
+  --surface4_rgb: 197, 231, 200;
+  --surface5: var(--primary_lighten2);
+
+  --shadow1: var(--white3);
+  --shadow2: var(--grey4);
+  --shadow3: var(--grey3);
+
+  --border1: var(--grey2);
+  --border2: var(--grey3);
+
+  --button1: var(--primary);
+  --button2: var(--primary_lighten);
+
+  --link: var(--primary_darken);
+
+  --error1: var(--red1);
+  --error2: var(--red2);
+
 }
