--- a/src/index.css
+++ b/src/index.css
@@ -64,12 +64,17 @@ body::-webkit-scrollbar-thumb:active {
 
   --primary: #6ec475;
   --primary_lighten: #c5e7c8;
-  --primary_darken: #235728;
   --primary_lighten2: #e2f3e3;
+  --primary_darken: #235728;
+  --primary_saturated_darken: #27a531;
 
   --secondary: #c46ebd;
   --secondary_lighten: #e7c5e4;
   --secondary_darken: #572353;
+
+  --white1_p8_opacity: rgba(250, 250, 250, 0.8);
+  --grey5_p5_opacity: rgba(220, 220, 220, 0.5);
+  --primary_lighten_p8_opacity: rgba(197, 231, 200, 0.8);
 
   /* ------------------------------- */
 
@@ -78,11 +83,9 @@ body::-webkit-scrollbar-thumb:active {
   --text3: var(--black3);
 
   --surface1: var(--white1);
-  --surface1_rgb: 250, 250, 250;
   --surface2: var(--white2);
   --surface3: var(--white3);
   --surface4: var(--primary_lighten);
-  --surface4_rgb: 197, 231, 200;
   --surface5: var(--primary_lighten2);
 
   --shadow1: var(--white3);
@@ -94,8 +97,9 @@ body::-webkit-scrollbar-thumb:active {
 
   --button1: var(--primary);
   --button2: var(--primary_lighten);
+  --button3: var(--primary_saturated_darken);
 
-  --link: var(--primary_darken);
+  --link: var(--primary);
 
   --error1: var(--red1);
   --error2: var(--red2);
